--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div className='bg-[#76B5C8]' id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="src/main.jsx"></script>
 </body>
 
 </html>
